--- a/css/main.css
+++ b/css/main.css
@@ -25,9 +25,14 @@ a {
   padding-top: 50px;
 }
 
-.menu-item {
+.menu-list {
+  width: 1200px;
+}
+
+.menu-list > .menu-item {
   display: inline-block;
   padding: 60px;
+  margin-right: 80px;
 }
 
 .menu-item a {
@@ -38,4 +43,38 @@ a {
 
 .menu-item.logo {
   padding: 100px;
+}
+
+.main {  
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 50px;
+  display: flex;
+
+}
+
+.img-container {
+  height: 600px;
+}
+
+.img-container > img {
+  width: 90%;
+  height: 600px;
+  object-fit: cover;
+}
+
+.text-container h1{
+  margin-top: -25px;
+  font-size: 7rem;
+  color: #7286D3;
+  line-height: 120px;
+  font-family: 'Bagel Fat One', system-ui;
+}
+
+.text-container p {
+  margin-top: 80px;
+  font-size: 25px;
+  line-height: 50px;
+  color: #7286D3;
+  font-family: 'Gowun Dodum', sans-serif;
 }
