--- a/css/main.css
+++ b/css/main.css
@@ -1,80 +1,230 @@
-/* 초기화 */
-* {
+/* 노말라이즈 시작 */
+body, ul, li {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  list-style: none;
 }
 
 a {
+  color: inherit;
   text-decoration: none;
 }
 
-.container {
-  background-color: #E5E0FF;
+/* 노말라이즈 끝 */
+
+/* 라이브러리 시작 */
+.img-box > img {
+  width:100%;
+  display:block;
+}
+
+.float-grid::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+.float-grid > * {
+  float: left;
+  box-sizing: border-box;
+}
+
+/* 라이브러리 끝 */
+
+/* 커스텀 시작 */
+:root {
+  --side-bar__width : 60px;
+  --side-bar__background-color : #7286D3;
+  --side-bar__background-color2: #8EA7E9;
+  --side-bar__color : #FFF2F2;
+  --side-bar__color2 : #E5E0FF;
+  --side-bar__status-ico__transition-duration:.2s;
+}
+
+.side-bar {
+  font-family: 'IBM Plex Sans KR', sans-serif;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: var(--side-bar__width);
+  height: 100%;
+  background-color: var(--side-bar__background-color);
+  transition: width .3s;
+  color: var(--side-bar__color);
+  overflow: hidden;
+}
+
+.side-bar:hover {
+  width: 300px;
+}
+
+/* 아이콘 애니메이션 시작 */
+.side-bar__status-ico {
+  width: 20px;
+  height: 20px;
+  position:absolute;
+  top:30px;
+  left:20px;
+}
+
+.side-bar__status-ico > div {
+  width: 100%;
+  height: 20%;
+  background-color: var(--side-bar__color);
+  position: absolute;
+  top: 0;
+  left: 0;
+  transition: all var(--side-bar__status-ico__transition-duration);
+}
+
+.side-bar__status-ico > div:nth-child(1) {
+  width: auto;
+  right: 0;
+  left: 0;
+  transition: all var(--side-bar__status-ico__transition-duration), 
+  left calc(var(--side-bar__status-ico__transition-duration) / 2) calc(var(--side-bar__status-ico__transition-duration) / 2), 
+  right calc(var(--side-bar__status-ico__transition-duration) / 2) calc(var(--side-bar__status-ico__transition-duration) / 2), 
+  height calc(var(--side-bar__status-ico__transition-duration) / 2) 0s ;
+}
+
+.side-bar:hover .side-bar__status-ico > div:nth-child(1) {
+  left: 40%;
+  right: 40%;
+  height: 100%;
+  transition: all calc(var(--side-bar__status-ico__transition-duration) / 2), 
+  left calc(var(--side-bar__status-ico__transition-duration) / 2) 0s, 
+  right calc(var(--side-bar__status-ico__transition-duration) / 2) 0s, 
+  height calc(var(--side-bar__status-ico__transition-duration) / 2) calc(var(--side-bar__status-ico__transition-duration) / 2) ;
+}
+
+.side-bar__status-ico > div:nth-child(2) {
+  top: 40%;
+  transform-origin: bottom left;
+}
+
+.side-bar:hover .side-bar__status-ico > div:nth-child(2) {
+  transform: rotate(45deg);
+  width: 70.5%;
+}
+
+.side-bar__status-ico > div:nth-child(3) {
+  top: 80%;
+  left: auto;
+  right: 0;
+  transform-origin: bottom right;
+}
+
+.side-bar:hover .side-bar__status-ico > div:nth-child(3) {
+  top: 40%;
+  width: 70.5%;
+  transform: rotate(-45deg);
+}
+/* 아이콘 애니메이션 끝 */
+
+/* 사이드 메뉴 시작 */
+.side-bar__menu-box-1 {
+  margin-top:80px;
+}
+
+.side-bar__menu-box-1 > ul > li > a {
+  display: block;
+  position: relative;
+  white-space: nowrap;
+  padding: 10px 12px;
+  font-weight: bold;
+}
+
+.side-bar__menu-box-1 > ul > li > a::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background-color: var(--side-bar__color);
+  transition: width .3s;
+}
+
+.side-bar__menu-box-1 > ul > li:hover > a::after {
+  width: 100%;
+}
+
+.side-bar__menu-box-1 > ul > li > a > * {
+  vertical-align: middle;
+}
+
+.side-bar__menu-box-1 > ul > li > a > span:first-child {
+  width: 2rem;
+  height: 2rem;
+  display: inline-block;
+  border: 2px solid var(--side-bar__color);
+  border-radius: 50%;
+  position: relative;
+  margin-right: 9px;
+}
+
+.side-bar__menu-box-1 > ul > li:hover > a > span:first-child {
+  transform: translateX(5px);
+}
+
+.side-bar__menu-box-1 > ul > li > a > span:first-child > i {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.side-bar__menu-box-1 > ul > li > a > span:last-child {
+  font-style: italic;
+  text-shadow: 3px 3px 0 rgba(255, 255, 255, .2);
+  transition: tetx-shadow .12s, opacity .3s .3s, transform .3s .3s;
+  opacity: 0;
+  transform: translateY(100%);
+  display: inline-block;
+}
+
+.side-bar__menu-box-1 > ul > li:nth-child(2) > a > span:last-child {
+  transition: tetx-shadow .12s, opacity .3s .35s, transform .3s .35s;
+}
+
+.side-bar__menu-box-1 > ul > li:nth-child(3) > a > span:last-child {
+  transition: tetx-shadow .12s, opacity .3s .4s, transform .3s .4s;
+}
+
+.side-bar__menu-box-1 > ul > li:nth-child(4) > a > span:last-child {
+  transition: tetx-shadow .12s, opacity .3s .45s, transform .3s .45s;
+}
+
+.side-bar__menu-box-1 > ul > li:nth-child(5) > a > span:last-child {
+  transition: tetx-shadow .12s, opacity .3s .5s, transform .3s .5s;
+}
+
+.side-bar__menu-box-1 > ul > li:nth-child(6) > a > span:last-child {
+  transition: tetx-shadow .12s, opacity .3s .55s, transform .3s .55s;
+}
+
+.side-bar__menu-box-1 > ul > li:hover > a > span:last-child {
+  text-shadow: 0 0 2px rgba(255, 255, 255, 1);
+}
+
+.side-bar:hover .side-bar__menu-box-1 > ul > li > a > span:last-child {
+  opacity: 1;
+  transform: translateY(0);
+}
+
+/* 사이드 메뉴 끝 */
+
+/* 갤러리 시작 */
+.section-gallery {
+  margin-left: var(--side-bar__width);
+}
+
+.section-gallery__img-list {
   width: 100%;
   height: 100vh;
+  background-color: var(--side-bar__background-color2);
 }
 
-.container .header {
-  width: 80%;
-  height: 120px;
-  margin: 0 auto; /* 중앙 정렬 */
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 50px;
-}
+/* 갤러리 끝 */
 
-.menu-list {
-  width: 1200px;
-}
-
-.menu-list > .menu-item {
-  display: inline-block;
-  padding: 60px;
-  margin-right: 80px;
-}
-
-.menu-item a {
-  font-size: 20px;
-  font-weight: bold;
-  color: #7286D3;
-}
-
-.menu-item.logo {
-  padding: 100px;
-}
-
-.main {  
-  width: 80%;
-  margin: 0 auto;
-  margin-top: 50px;
-  display: flex;
-
-}
-
-.img-container {
-  height: 600px;
-}
-
-.img-container > img {
-  width: 90%;
-  height: 600px;
-  object-fit: cover;
-}
-
-.text-container h1{
-  margin-top: -25px;
-  font-size: 7rem;
-  color: #7286D3;
-  line-height: 120px;
-  font-family: 'Bagel Fat One', system-ui;
-}
-
-.text-container p {
-  margin-top: 80px;
-  font-size: 25px;
-  line-height: 50px;
-  color: #7286D3;
-  font-family: 'Gowun Dodum', sans-serif;
-}
+/* 커스텀 끝 */
