--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,13 @@ a {
   box-sizing: border-box;
 }
 
+.noto-sans kr {
+  font-family: "Noto Sans KR", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: bold;
+  font-style: normal;
+}
+
 /* 라이브러리 끝 */
 
 /* 커스텀 시작 */
@@ -42,7 +49,7 @@ a {
 }
 
 .side-bar {
-  font-family: 'IBM Plex Sans KR', sans-serif;
+  font-family: "Noto Sans KR", sans-serif;
   position: fixed;
   top: 0;
   left: 0;
@@ -174,33 +181,25 @@ a {
   transform: translate(-50%, -50%);
 }
 
-.side-bar__menu-box-1 > ul > li > a > span:last-child {
+.side-bar__menu-box-1 > ul > li > a > span:last-child { 
   font-style: italic;
   text-shadow: 3px 3px 0 rgba(255, 255, 255, .2);
-  transition: tetx-shadow .12s, opacity .3s .3s, transform .3s .3s;
+  transition: text-shadow .12s, opacity .3s .3s, transform .3s .3s;
   opacity: 0;
   transform: translateY(100%);
   display: inline-block;
 }
 
 .side-bar__menu-box-1 > ul > li:nth-child(2) > a > span:last-child {
-  transition: tetx-shadow .12s, opacity .3s .35s, transform .3s .35s;
+  transition: text-shadow .12s, opacity .3s .35s, transform .3s .35s;
 }
 
 .side-bar__menu-box-1 > ul > li:nth-child(3) > a > span:last-child {
-  transition: tetx-shadow .12s, opacity .3s .4s, transform .3s .4s;
+  transition: text-shadow .12s, opacity .3s .4s, transform .3s .4s;
 }
 
 .side-bar__menu-box-1 > ul > li:nth-child(4) > a > span:last-child {
-  transition: tetx-shadow .12s, opacity .3s .45s, transform .3s .45s;
-}
-
-.side-bar__menu-box-1 > ul > li:nth-child(5) > a > span:last-child {
-  transition: tetx-shadow .12s, opacity .3s .5s, transform .3s .5s;
-}
-
-.side-bar__menu-box-1 > ul > li:nth-child(6) > a > span:last-child {
-  transition: tetx-shadow .12s, opacity .3s .55s, transform .3s .55s;
+  transition: text-shadow .12s, opacity .3s .45s, transform .3s .45s;
 }
 
 .side-bar__menu-box-1 > ul > li:hover > a > span:last-child {
@@ -211,20 +210,44 @@ a {
   opacity: 1;
   transform: translateY(0);
 }
-
 /* 사이드 메뉴 끝 */
 
 /* 갤러리 시작 */
-.section-gallery {
-  margin-left: var(--side-bar__width);
-}
-
-.section-gallery__img-list {
-  width: 100%;
+.section-gallery__img-list > ul > li {
   height: 100vh;
-  background-color: var(--side-bar__background-color2);
+  overflow: hidden;
 }
 
-/* 갤러리 끝 */
+/* 텍스트 효과 시작 */
+.typing-text {
+  position: absolute;
+  top: 0;
+  left: 40%;
+  font-family: "Noto Sans KR", sans-serif;
+  color: var(--side-bar__color);
+  font-size: 5rem;
+  font-weight: bold;
+  border-right: 3px solid #fff;
+  animation: blink 0.5s infinite, typing 3s steps(22) infinite;
+  white-space: nowrap;
+  overflow: hidden;
+}
 
+@keyframes blink {
+  50% {
+    border-color : transparent;
+  }
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 880px;
+  }
+}
+/* 텍스트 효과 끝 */
+/* 갤러리 끝 */
 /* 커스텀 끝 */
